updated styles for media queries

--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ h1, h2, h3 {
 #section-a {
 	background: #eaeaea;
 	color: #333;
-	padding-bottom: 2em;
+	padding: 2em;
 }
 
 /* Section B */
@@ -108,4 +108,67 @@ h1, h2, h3 {
 	background: #fff;
 	color: #333;
 	padding: 2em;
+}
+
+
+/* Section D */
+
+#section-d .box {
+	padding: 2em;
+	color: #fff;
+}
+
+#section-d .box:first-child {
+	background: #2690d4;
+}
+
+
+/* Footer */
+
+#main-footer {
+	padding: 2em;
+	background: #000;
+	color: #fff;
+	text-align: center;
+}
+
+#main-footer{
+	color: #2690d4;
+	text-decoration: none;
+}
+
+
+/* Media Queries */
+
+@media(max-width: 700px){
+	.grid {
+		display: grid;
+		grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+	}
+
+	#section-a .content-text {
+		columns: 2;
+		column-gap: 2em;
+	}
+
+	#section-a .content-text p {
+		padding-top: 0;
+	}
+
+	.content-wrap, #section-b ul {
+		grid-column: 2/4;
+	}
+
+	.box, #main-footer div {
+		grid-column:  span 2;
+	}
+
+	#section-b ul {
+		display: flex;
+		justify-content: space-around;
+	}
+
+	#section-b li {
+		width: 31%;
+	}
 }
